src/test/ui/parser/raw/raw-str-unbalanced.stderr
error: too many `#` when terminating raw string
  --> $DIR/raw-str-unbalanced.rs:2:5
   |
LL |       r#"
   |       ^- The raw string has 1 leading `#`...
   |  _____|
   | |
LL | |       "##;
   | |________-^
   |          |
   |          ...but is closed with 2.
   = help: remove the unneeded `#`

error: aborting due to previous error

